@@ -1,7 +1,3 @@
-Mnemosyne 1.0.1:
-
--redirect windows error log to a file
-
 -update list of translations on website
 -Google analytics
 
