@@ -16,6 +16,8 @@ MNEMOSYNE 1.0.1
 -Add support for html style escaped unicode in txt import, to allow import
  of Supermemo databases containing unicode (requested by Patrick Kenny).
 -Make import of tab delimited files more robust (reported by nairbv).
+-On Windows, log errors to a file in the user's directory, as opposed to a
+ file in a system directory (requested by nairbv).
 -Visually distinguish grades 0 and 1 from other grades (based on input
  from Juan Alonso and Mike Charlton.
 -Czech translation by Jiri Popelka and Petr Tomica.
